dark mode colors corrected; shadow for dialog added

--- a/public/global.css
+++ b/public/global.css
@@ -11,9 +11,9 @@ body:not(.dark-mode) {
 }
 
 body.dark-mode {
-	--color: rgb(250, 250, 250);
+	--color: #efefef;
 	--background-color: rgb(5, 5, 5);
-	--background-color-dialog: rgba(0, 0, 0, 0.66);
+	--background-color-dialog: rgba(30, 30, 30, 0.66);
 }
 
 body {
